fixing weird display issues for time fields in dark mode

--- a/src/Timey.scss
+++ b/src/Timey.scss
@@ -113,12 +113,14 @@
                     flex-direction: row;
                     align-items:center;
                     border: 1px solid black;
+                    background-color: white;
 
                     input {
                         padding: 4px;
                         width: 16px;
                         border: 0;
                         outline: none;
+
                         &:first-child {
                             padding-right: 2px;
                         }
